two different version of a navbar are up, make a decision team!

--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </body>
 
 <template name="topBar">
-	<img src="img/back1.jpg" alt="" id="back">
+<img src="img/back1.jpg" alt="" id="back">
   <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
@@ -37,9 +37,26 @@
   </section>
 </nav>
 
-<div class="panel">
-  <h5>This is a regular panel.</h5>
-  <p>It has an easy to override visual style, and is appropriately subdued.</p>
+<div class="icon-bar five-up">
+  <a class="item">
+    <img src="img/meta.png" >
+    <label>Home</label>
+  </a>
+  <a class="item">
+    <img src="images/fi-bookmark.svg" >
+    <label>Bookmark</label>
+  </a>
+  <a class="item">
+    <img src="../assets/img/images/fi-info.svg" >
+    <label>Info</label>
+  </a>
+  <a class="item">
+    <img src="../assets/img/images/fi-mail.svg" >
+    <label>Mail</label>
+  </a>
+  <a class="item">
+    <img src="../assets/img/images/fi-like.svg" >
+    <label>Like</label>
+  </a>
 </div>
-
 </template>
