fixed navbar + basic positioning

--- a/main.html
+++ b/main.html
@@ -9,19 +9,13 @@
 <template name="topBar">
   <!-- broken img shit -->
   <!-- {{> backImage}} -->
-<<<<<<< HEAD
-  <img src="images/back3.jpg" alt="" id="fadeIn">
-=======
-  <img src="images/back2.jpg" alt="" id="fadeIn" style="position: relative; top: 0; left: 0;"/>
   <!-- Hey Mike! Lets make the href slowly slide down to nav also lets make a good logo! -->
-  <a href="#"> 
-    <img src="images/metacupcakelogoHQ.png" alt="" id="fadeIn" style="position: absolute; top: 30px; left: 290px;" width="45%"/>
-  </a>
->>>>>>> 5e8a3eaffcd2ad44549fe9e6994fc24082f4249a
-
-  <div class="icon-bar five-up">
+<!--   <a href="#">
+    <img src="images/metacupcakelogoHQ.png" alt="" style="position: absolute; top: 30px; left: 290px;" width="45%"/>
+  </a> -->
+  <div class="icon-bar five-up" id="fix">
   <a class="item" href="/">
-    <img src="images/fi-home.svg">
+    <img src="images/fi-home.svg" width="100%" height="100%">
   </a>
   <a class="item" href="http://einsteinsmistress.meteor.com/">
     <img src="images/fi-comments.svg" alt="">
@@ -36,8 +30,6 @@
     <img src="images/fi-save.svg" alt="">
   </a>
 </div>
-</template>
-<template name="logo">
-  
-
+  <img src="images/back1.jpg" alt="" id="fadeIn"/>
+  <img src="images/metacupcakelogo.png" alt="" id="logoFix">
 </template>
