MADE RANDOM IMAGE GENERATOR BIATCH, and added a nice fade in to the ui

--- a/main.html
+++ b/main.html
@@ -7,29 +7,27 @@
 </body>
 
 <template name="topBar">
-  <!-- broken img shit -->
-  <!-- {{> backImage}} -->
   <!-- Hey Mike! Lets make the href slowly slide down to nav also lets make a good logo! -->
 <!--   <a href="#">
     <img src="images/metacupcakelogoHQ.png" alt="" style="position: absolute; top: 30px; left: 290px;" width="45%"/>
   </a> -->
-  <div class="icon-bar five-up" id="fix">
-  <a class="item" href="/">
-    <img src="images/fi-home.svg" width="100%" height="100%">
-  </a>
-  <a class="item" href="http://einsteinsmistress.meteor.com/">
-    <img src="images/fi-comments.svg" alt="">
-  </a>
-  <a class="item" href="http://dinnertalk.org/">
-    <img src="images/fi-music.svg" alt="">
-  </a>
-  <a class="item" href="https://www.youtube.com/embed/r2lHo00uljU?list=PLa3y20ceH3J4gYImNRTxVDMBlfvf9ANBR">
-    <img src="images/fi-video.svg" alt="">
-  </a>
-  <a class="item" href="http://metacupcake.com/hacks">
-    <img src="images/fi-save.svg" alt="">
-  </a>
-</div>
-  <img src="images/back1.jpg" alt="" id="fadeIn"/>
+  <div class="icon-bar five-up">
+    <a class="item" href="/">
+      <img src="images/fi-home.svg" width="100%" height="100%">
+    </a>
+    <a class="item" href="http://einsteinsmistress.meteor.com/">
+      <img src="images/fi-comments.svg" alt="">
+    </a>
+    <a class="item" href="http://dinnertalk.org/">
+      <img src="images/fi-music.svg" alt="">
+    </a>
+    <a class="item" href="https://www.youtube.com/embed/r2lHo00uljU?list=PLa3y20ceH3J4gYImNRTxVDMBlfvf9ANBR">
+      <img src="images/fi-video.svg" alt="">
+    </a>
+    <a class="item" href="http://metacupcake.com/hacks">
+      <img src="images/fi-save.svg" alt="">
+    </a>  
+  </div>
+    {{> backgroundImage}}
   <img src="images/metacupcakelogo.png" alt="" id="logoFix">
 </template>
