--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 
 <body>
   {{> topBar}}
+
 </body>
 
 <template name="topBar">
@@ -11,7 +12,7 @@
 <!--   <a href="#">
     <img src="images/metacupcakelogoHQ.png" alt="" style="position: absolute; top: 30px; left: 290px;" width="45%"/>
   </a> -->
-  <div class="icon-bar five-up">
+  <div class="icon-bar six-up">
     <a class="item" href="/">
       <img src="images/fi-home.svg" width="100%" height="100%">
     </a>
@@ -26,8 +27,12 @@
     </a>
     <a class="item" href="http://metacupcake.com/hacks">
       <img src="images/fi-save.svg" alt="">
-    </a>  
+    </a>
+    <a class="item" href="http://metacupcake.com/hacks">
+      <img src="images/fi-save.svg" alt="">
+    </a>
   </div>
     {{> backgroundImage}}
   <img src="images/metacupcakelogo.png" alt="" id="logoFix">
 </template>
+
