added bootsrap + autorouter

--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
     <a class="item" href="http://metacupcake.com/hacks">
       <img src="images/fi-save.svg" alt="">
     </a>
-    <a class="item" href="http://metacupcake.com/hacks">
+    <a class="item" href="/chessy">
       <img src="images/fi-save.svg" alt="">
     </a>
   </div>
