--- a/main.html
+++ b/main.html
@@ -3,17 +3,17 @@
 </head>
 
 <body>
-  {{> topBar}}
+  
 
 </body>
 
-<template name="topBar">
+<template name="home">
   <!-- Hey Mike! Lets make the href slowly slide down to nav also lets make a good logo! -->
 <!--   <a href="#">
     <img src="images/metacupcakelogoHQ.png" alt="" style="position: absolute; top: 30px; left: 290px;" width="45%"/>
   </a> -->
   <div class="icon-bar six-up">
-    <a class="item" href="/">
+    <a class="item" href="/home">
       <img src="images/fi-home.svg" width="100%" height="100%">
     </a>
     <a class="item" href="http://einsteinsmistress.meteor.com/">
