added photo to background array

--- a/main.html
+++ b/main.html
@@ -3,7 +3,6 @@
 </head>
 
 <body>
-  
 
 </body>
 
@@ -12,9 +11,9 @@
 <!--   <a href="#">
     <img src="images/metacupcakelogoHQ.png" alt="" style="position: absolute; top: 30px; left: 290px;" width="45%"/>
   </a> -->
-  <div class="icon-bar six-up">
+  <div class="icon-bar five-up">
     <a class="item" href="/home">
-      <img src="images/fi-home.svg" width="100%" height="100%">
+      <img src="images/webicons/webicon-github.svg" alt="">
     </a>
     <a class="item" href="http://einsteinsmistress.meteor.com/">
       <img src="images/fi-comments.svg" alt="">
@@ -28,11 +27,7 @@
     <a class="item" href="http://metacupcake.com/hacks">
       <img src="images/fi-save.svg" alt="">
     </a>
-    <a class="item" href="/chessy">
-      <img src="images/fi-save.svg" alt="">
-    </a>
   </div>
     {{> backgroundImage}}
   <img src="images/metacupcakelogo.png" alt="" id="logoFix">
 </template>
-
