--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     <a class="item" href="/home">
       <img src="images/webicons/webicon-github.svg" alt="">
     </a>
-    <a class="item" href="http://einsteinsmistress.meteor.com/">
+    <a class="item" href="http://72-vcards.meteor.com/">
       <img src="images/fi-comments.svg" alt="">
     </a>
     <a class="item" href="http://dinnertalk.org/">
