--- a/main.html
+++ b/main.html
@@ -29,5 +29,7 @@
     </a>  
   </div>
     {{> backgroundImage}}
-  <img src="images/metacupcakelogo.png" alt="" id="logoFix">
+  <img src="images/metacupcakelogoCOLOR.svg" alt="" id="logoFix" width="10%">
+  <img src="images/metacupcakeText.svg" alt="" id="logoFix" width= "20%">
+  
 </template>
